<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TextView
        android:id="@+id/im_session"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:paddingLeft = "5dp"
        android:background="@drawable/list_selector"
        android:gravity="center_vertical"
        android:text="@string/im_session"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/im_sessionToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/toggle" 
        android:onClick="setCapabilities"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/im_sessionToggle"
        android:background="@drawable/list_selector"
        android:paddingLeft = "5dp"
        android:gravity="center_vertical"
        android:text="@string/file_transfer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_height="50dp"
        android:paddingLeft = "5dp"
        android:layout_below="@+id/textView2"
        android:gravity="center_vertical"
        android:background="@drawable/list_selector"
        android:text="@string/image_share"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:paddingLeft = "5dp"
        android:layout_below="@+id/textView3"
        android:background="@drawable/list_selector"
        android:gravity="center_vertical"
        android:text="@string/video_share"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:paddingLeft = "5dp"
        android:layout_below="@+id/textView4"
        android:background="@drawable/list_selector"
        android:gravity="center_vertical"
        android:text="@string/social_presence"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:paddingLeft = "5dp"
        android:layout_below="@+id/textView5"
        android:background="@drawable/list_selector"
        android:gravity="center_vertical"
        android:text="@string/discovery_presence"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/file_transferToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/im_sessionToggle"
        android:text="@string/toggle" />

    <ToggleButton
        android:id="@+id/image_shareToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/file_transferToggle"
        android:text="@string/toggle" 
        android:onClick="setCapabilities"/>

    <ToggleButton
        android:id="@+id/video_shareToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/image_shareToggle"
        android:text="@string/toggle" 
        android:onClick="setCapabilities"/>

    <ToggleButton
        android:id="@+id/social_presenceToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/video_shareToggle"
        android:text="@string/toggle" 
        android:onClick="setCapabilities"/>

    <ToggleButton
        android:id="@+id/discovery_presenceToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/social_presenceToggle"
        android:text="@string/toggle" 
        android:onClick="setCapabilities"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:onClick="getCapabilities"
        android:text="@string/refresh" />

    </RelativeLayout>